--- a/setup-core.org
+++ b/setup-core.org
@@ -428,6 +428,25 @@ Pull in information from private module, if it exists.
     (sf/bootstrap-packages))
 #+END_SRC
 
+* Hydra - Making Emacs bindings stick around
+
+[[https://github.com/abo-abo/hydra][Hydra]] is a Emacs package that can be used to tie related commands into a
+family of short bindings with a common prefix - aka the Hydra.
+
+Abo Abo has some interesting posts on Hydra that demonstrate its
+utility:
+
+- [[http://oremacs.com/2015/02/03/one-hydra-two-hydra/][One Hydra Two Hydra Red Hydra Blue Hydra]]
+- [[http://oremacs.com/2015/02/04/pre-hydra-post/][New in Hydra - :pre and :post clauses]]
+- [[http://oremacs.com/2015/02/02/colorful-hydrae/][Colorful Hydras]]
+
+This is effectively a building block to build a UI to execute different actions.
+
+#+BEGIN_SRC emacs-lisp
+  (use-package hydra
+    :ensure t)
+#+END_SRC
+
 * Postamble
 
 Finally, offer module for use.
