--- a/emacs.org
+++ b/emacs.org
@@ -27,6 +27,7 @@ sources, including (in no particular order):
 - [[http://org.rix.si/][Ryan Rix]]'s [[http://doc.rix.si/cce/cce.html][Complete Computing Environment]] (formerly [[http://doc.rix.si/org/fsem.html][Hardcore Freestyle Emacs]] [[http://fort.kickass.systems:10082/cgit/personal/rrix/pub/fsem.git/tree/fsem.org][org source]]) 
 - [[https://github.com/abelardojarab/emacs-config][Abelardo Jara-Berrocal]]
 - [[https://writequit.org][Lee Hinman]]'s [[https://writequit.org/eos/eos.html][Emacs Operating System]] (see https://github.com/dakrone/eos)
+- [[http://karl-voit.at/][Karl Voit]]'s [[https://github.com/novoid/dot-emacs][dot-emacs]]
 
 Embedding Emacs configuration in *org-mode* is heavily inspired by the
 ideas in [[http://en.wikipedia.org/wiki/Literate_programming][Literate Programming]].
