--- a/setup-eshell.org
+++ b/setup-eshell.org
@@ -30,7 +30,7 @@ Now, let's go ahead and configure eshell:
     :init
     (progn
       (setq
-        eshell-visual-commands '("less" "tmux" "htop" "top" "bash" "zsh" "fish" "docker")
+        eshell-visual-commands '("less" "tmux" "htop" "top" "docker")
         eshell-visual-subcommands '(("git" "log" "diff" "show"))
         )
       (evil-set-initial-state 'eshell-mode 'emacs))
