--- a/setup-elfeed.org
+++ b/setup-elfeed.org
@@ -54,10 +54,11 @@
            ("https://www.masteringemacs.org/feed" emacs )
            ("http://karl-voit.at/feeds/lazyblorg-all.atom_1.0.links-and-content.xml" emacs)
            ("http://irreal.org/blog/?feed=rss2" emacs)
-           ("http://planetsysadmin.com/atom.xml" devops)
-           ("https://feeds.feedburner.com/sysadvent" devops)
-           ("https://blog.miguelgrinberg.com/feed" devops python)
-           ("http://planetpython.org/rss20.xml" devops python)
+           ("https://planet.postgresql.org/rss20.xml" devops postgres )
+           ("https://blog.miguelgrinberg.com/feed" devops python )
+           ("http://planetpython.org/rss20.xml" devops python )
+           ("http://planetsysadmin.com/atom.xml" devops )
+           ("https://feeds.feedburner.com/sysadvent" devops )
            ("http://planet.centos.org/atom.xml" linux centos)
            ("http://kernelplanet.org/rss20.xml" linux )
            ("http://planet.freedesktop.org/rss20.xml" linux )
