--- a/setup-eshell.org
+++ b/setup-eshell.org
@@ -28,15 +28,12 @@ Now, let's go ahead and configure eshell:
       (unintern 'eshell/su nil)
       (unintern 'eshell/sudo nil))
     :init
+    (evil-set-initial-state 'eshell-mode 'emacs)
+    :config
     (progn
       (setq
         eshell-visual-commands '("less" "tmux" "htop" "top" "docker")
         eshell-visual-subcommands '(("git" "log" "diff" "show"))
-        )
-      (evil-set-initial-state 'eshell-mode 'emacs))
-    :config
-    (progn
-      (setq
         eshell-prompt-function (lambda ()
                                  (concat
                                    "┌─["
